Fixed background repeat on mobile sizes

--- a/frontend/eventportal/src/index.css
+++ b/frontend/eventportal/src/index.css
@@ -38,7 +38,7 @@ body {
 
   background-image: url('./static/images/icons/socialpassLogo_gray.svg');
   background-repeat: repeat;
-  background-size: 10vw;
+  background-size: 200px;
 }
 
 /* #root {
